#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.13])
AC_INIT([ltp-service], [1.0], [zhhan@ir.hit.edu.cn])
AC_CONFIG_SRCDIR([__xml4nlp/tinyxmlerror.cpp])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ltp-service, 1.0)
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
#static lib
#AC_PROG_RANLIB	
# FIXME: Replace `main' with a function in `-lbase64':
AC_CHECK_LIB([base64], [main])
# FIXME: Replace `main' with a function in `-ldl':
AC_CHECK_LIB([dl], [main])
# FIXME: Replace `main' with a function in `-lltpservice':
AC_CHECK_LIB([ltpservice], [main])
# FIXME: Replace `main' with a function in `-lutil':
AC_CHECK_LIB([util], [main])
# FIXME: Replace `main' with a function in `-lxml4nlp':
AC_CHECK_LIB([xml4nlp], [main])

# Checks for header files.
AC_CHECK_HEADERS([netdb.h stddef.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_CHECK_FUNCS([gethostbyname memmove socket strchr])

AC_CONFIG_FILES([Makefile
                 __ltpService/Makefile
                 __util/Makefile
                 __xml4nlp/Makefile
                 ])
AC_OUTPUT
