AUTOMAKE_OPTIONS = foreign

INCLUDES = -I. -I../__xml4nlp -I../__util
#Note: target part
lib_LTLIBRARIES = libservice.la

libservice_la_SOURCES = \
	CirService.cpp CirService.h \
	LTPService.cpp LTPService.h \
	LTPOption.cpp LTPOption.h \
	Word.cpp Word.h \
	LTML.cpp LTML.h

#lib_LIBRARIES = libservice.a

#libservice_a_SOURCES = \
	#CirService.cpp CirService.h \
	#LTPService.cpp LTPService.h \
	#LTPOption.cpp LTPOption.h \
	#Word.cpp Word.h \
	#LTML.cpp LTML.h

#libservice_a_LIBADD = ../__util/libutil.a \
	#../__xml4nlp/libxml4nlp.a

