AUTOMAKE_OPTIONS = foreign

INCLUDES = -I. -I../__ltpService \
	-I ../__xml4nlp
#Note: target part
lib_LTLIBRARIES = libutil.la

libutil_la_SOURCES = \
	MyLib.cpp \
	MyLib.h \
	Base64Encoder.cpp \
	Base64Encoder.h 

#libutil_la_LIBADD = -L ../__ltpService -lservice \
	#-L ../__xml4nlp -lxml4nlp

#lib_LIBRARIES = libutil.a

#libutil_a_SOURCES = \
#	MyLib.cpp \
#	Mylib.h \
#	Base64Encoder.cpp \
#	Base64Encoder.h 

#libutil_a_LIBADD = ../__ltpService/libservice.a \
#	../__xml4nlp/libxml4nlp.a

