AUTOMAKE_OPTIONS = foreign

INCLUDES = -I. -I ../__util \
	-I ../__ltpService

lib_LTLIBRARIES = libxml4nlp.la

libxml4nlp_la_SOURCES = \
	tinyxml.cpp tinyxml.h \
	tinyxmlerror.cpp tinyxmlparser.cpp \
	tinystr.cpp tinystr.h \
	Xml4nlp.cpp XML4NLP.H

#lib_LIBRARIES = libxml4nlp.a

#libxml4nlp_a_SOURCES = \
#	tinyxml.cpp tinyxml.h \
#	tinyxmlerror.cpp tinyxmlparser.cpp \
#	tinystr.cpp tinystr.h \
#	Xml4nlp.cpp XML4NLP.H

