INCLUDES = -I. -I../__ltpService -I../__util -I../__xml4nlp

bin_PROGRAMS = ltp1 ltp2 ltp3

ltp1_SOURCES = example1.cpp

ltp1_LDADD = \
	-L../__util -lutil \
	-L../__ltpService -lservice \
	-L../__xml4nlp -lxml4nlp 

ltp1_LDFLAGS = -ldl

ltp2_SOURCES = example2.cpp

ltp2_LDADD = \
	-L../__util -lutil \
	-L../__ltpService -lservice \
	-L../__xml4nlp -lxml4nlp 

ltp2_LDFLAGS = -ldl

ltp3_SOURCES = example3.cpp

ltp3_LDADD = \
	-L../__util -lutil \
	-L../__ltpService -lservice \
	-L../__xml4nlp -lxml4nlp 

ltp3_LDFLAGS = -ldl

